item page fixes

--- a/webapp/webapp/templates/home/item.jinja2
+++ b/webapp/webapp/templates/home/item.jinja2
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<main role="main">
+<main role="main" class="emphasis--more l__wrapper">
 
 
 <!--   <form id="form" method="POST" class="form-search" action="/">
@@ -15,41 +15,22 @@
       <button id="find_button" type="submit" class="btn">Search</button>
   </form> -->
 
-  <div class="l__wrapper l--push-bottom-2">
+  <div class="l--push-v-2">
 
-    <div class="g l--push-v-1">
-      <div class="g__item w--two-thirds w--m-one-half">
-      {% if result.text|count < 100 and result.url %}
-        <div class="media--image">
-          <img src="{{result.url}}" alt="Test">
-        </div>
-      {% else %}
-        <p>{{result.text}}</p>
-      {% endif %}
+    {% if result.url %}
+      <div class="media--image l--push-bottom-2">
+        <img src="{{result.url}}" alt="Test">
       </div>
-      <div class="g__item w--one-third w--m-one-half">
-        <div class="text--meta">
-          <a href="{{result.database}}/{{result.id}}">{{result.db_desc}}</a>
-        </div>
-        {% if result.text|count >= 100 and result.url %}
-          <div class="media--image">
-            <img src="{{result.url}}" alt="Test">
-          </div>
-        {% else %}
-          <p>{{result.text}}</p>
-        {% endif %}
-      </div>
-    </div>
+    {% endif %}
+    <p>{{result.text}}</p>
+    <p><a href="{{result.database}}/{{result.id}}">{{result.db_desc}}</a></p>
+    <p>
+    {% for keyword in result.keyword %}
+      {{keyword}}
+    {% endfor %}
+    </p>
 
-    <div class="g -push-v-1">
-      <div class="g__item w--two-thirds w--m-one-whole">
-        <div class="comment--medium">
-          {% for keyword in result.keyword %}
-            {{keyword}}
-          {% endfor %}
-        </div>
-      </div>
-    </div>
+    <p><a href="#" onclick="window.history.back()">Back to results</a></p>
 
   </div>
 
