--- a/front/src/assets/css/style-old-ie.css
+++ b/front/src/assets/css/style-old-ie.css
@@ -931,7 +931,7 @@ These are components that can be utilised or are depended on by other components
 
 */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_layout\.scss}line{font-family:\0000332}}
-.l--clearfix, .l__wrapper {
+.l--clearfix, .l__wrapper, .header {
   overflow: hidden;
   *zoom: 1;
 }
@@ -2301,7 +2301,7 @@ button.form--story__button:hover {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_header\.scss}line{font-family:\000031}}
 .header {
-  background-color: #fefbf5;
+  position: relative;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_header\.scss}line{font-family:\000036}}
@@ -2320,4 +2320,12 @@ button.form--story__button:hover {
 .header__logo {
   max-width: 6em;
   padding: 1.125em 0 0.375em;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_header\.scss}line{font-family:\0000326}}
+.header__tagline {
+  font-style: italic;
+  clear: both;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
 }
