--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -72,6 +72,10 @@
           <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert"></div>
         </a>
 
+        <div class="header__tagline w--one-third">
+          <p>Learning about Brisbane, back in my day.</p>
+        </div>
+
     </header>
     </div>
 
