--- a/front/src/assets/sass/_components/_header.scss
+++ b/front/src/assets/sass/_components/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  background-color: lighten($color-bg-light, 3%);
-
+  @extend .l--clearfix;
+  position: relative;
 }
 
 .header__title {
@@ -20,5 +20,18 @@
   padding: rhythm(.75) 0 rhythm(.25);
   @include breakpoint($gte-huge) {
     max-width: rhythm(5);
+  }
+}
+
+.header__tagline {
+  font-style: italic;
+  clear: both;
+  @include opacity(.6);
+  @include breakpoint($gte-medium) {
+    float: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
   }
 }
