--- a/webapp/webapp/assets/css-sg/style.css
+++ b/webapp/webapp/assets/css-sg/style.css
@@ -878,7 +878,7 @@ These are components that can be utilised or are depended on by other components
 </div>
 
 */
-.l--clearfix, .l__wrapper {
+.l--clearfix, .l__wrapper, .header {
   overflow: hidden;
   *zoom: 1;
 }
@@ -2679,7 +2679,7 @@ button.form--story__button:hover {
 }
 
 .header {
-  background-color: #fefbf5;
+  position: relative;
 }
 
 .header__title {
@@ -2705,5 +2705,21 @@ button.form--story__button:hover {
 @media (min-width: 55em) {
   .header__logo {
     max-width: 7.5em;
+  }
+}
+
+.header__tagline {
+  font-style: italic;
+  clear: both;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
+}
+@media (min-width: 35em) {
+  .header__tagline {
+    float: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
   }
 }
