--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -81,11 +81,10 @@
 
     {% block content %}{% endblock %}
 
-    <footer role="contentinfo" class="l--push--v-2">
-      <div class="l__wrapper">
-
-      </div>
-    </footer>
   </div>
+
+  <script src="http://twitter.com/statuses/user_timeline/gusestennis.json?callback=twitterCallback2&count=1"></script>
+  <script src="http://api.twitter.com/1/statuses/user_timeline.json?count=3&exclude_replies=true&screen_name=BrisBert&callback=twitterCallback2"></script>
+
 </body>
 </html>
