--- a/webapp/webapp/templates/speak/speak.jinja2
+++ b/webapp/webapp/templates/speak/speak.jinja2
@@ -1,7 +1,7 @@
 
 <div class="g l--push-v-1">
   <div class="g__item w--two-thirds w--m-one-whole">
-    <div class="comment--medium">        
+    <div class="comment--medium l--pad-all-1">
       {{speak.bert|escape}}
     </div>
   </div>
