--- a/front/src/assets/sass/style.scss
+++ b/front/src/assets/sass/style.scss
@@ -72,3 +72,4 @@ These are components that can be utilised or are depended on by other components
 @import "_components/media";
 
 @import "_components/header";
+@import "_components/footer";
