--- a/webapp/webapp/assets/css-sg/style-old-ie.css
+++ b/webapp/webapp/assets/css-sg/style-old-ie.css
@@ -887,7 +887,7 @@ $max-site-width is assigned to this
   max-width: 45em;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 1.5em;
+  padding: 0 0.75em;
   min-width: 44em;
 }
 
@@ -2002,7 +2002,7 @@ button.form--story__button:hover {
   content: "";
   width: 0px;
   height: 0px;
-  right: -14px;
+  right: -20px;
   position: absolute;
   bottom: 10px;
   border-style: solid;
@@ -2087,4 +2087,18 @@ button.form--story__button:hover {
   clear: both;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
+}
+
+.footer {
+  background-color: #614E2D;
+  color: #fbf5e8;
+}
+
+.footer__title {
+  color: #fbf5e8;
+}
+
+.footer__block {
+  font-size: 0.75em;
+  line-height: 2em;
 }
