--- a/webapp/webapp/templates/home/home.jinja2
+++ b/webapp/webapp/templates/home/home.jinja2
@@ -8,7 +8,7 @@
 
 <main role="main" class="emphasis--more l__wrapper">
 
-  <div class="l--push-v-1">
+  <div class="l--push-top-2 l--push-bottom-1">
     <form id="form" method="POST" class="form-search form--story" action="/">
 
       <div class="l--push-top-1">
@@ -70,15 +70,15 @@
         <div class="footer__block">
           <h2 class="delta footer__title">Bert is on Twitter!</h2>
           <ul class="tweet list--link-block list--slat l--push-bottom-1" id="twitter_update_list"></ul>
+          <a href="http://twitter.com/BrisBert">Find BrisBert on Twitter</a>
         </div>
       </div>
       <div class="g__item w--one-half">
         <div class="footer__block">
+          <h2 class="delta footer__title">Made at <a href="http://govhack.org">GovHack</a></h2>
           <ul class="list--link-block list--slat l--push-bottom-1">
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
+            <li><a href="#">Who is BrisBert</a></li>
+            <li><a href="#">Who created him?</a></li>
           </ul>
         </div>
       </div>
