--- a/webapp/webapp/templates/home/home.jinja2
+++ b/webapp/webapp/templates/home/home.jinja2
@@ -64,21 +64,21 @@
 {% if twitter_feed %}
 
 <div class="l__wrapper footer">
-  <footer role="contentinfo" class="l--pad-v-2">
+  <footer role="contentinfo" class="l--pad-bottom-2">
     <div class="g">
       <div class="g__item w--one-half">
-        <div class="footer__block">
+        <div class="footer__block l--push-top-2">
           <h2 class="delta footer__title">Bert is on Twitter!</h2>
           <ul class="tweet list--link-block list--slat l--push-bottom-1" id="twitter_update_list"></ul>
           <a href="http://twitter.com/BrisBert">Find BrisBert on Twitter</a>
         </div>
       </div>
       <div class="g__item w--one-half">
-        <div class="footer__block">
+        <div class="footer__block l--push-top-2">
           <h2 class="delta footer__title">Made at <a href="http://govhack.org">GovHack</a></h2>
           <ul class="list--link-block list--slat l--push-bottom-1">
-            <li><a href="#">Who is BrisBert</a></li>
-            <li><a href="#">Who created him?</a></li>
+            <li><a href="/about">Who is BrisBert?</a></li>
+            <!-- <li><a href="#">Who created him?</a></li> -->
           </ul>
         </div>
       </div>
