--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -73,7 +73,7 @@
         </a>
 
         <div class="header__tagline w--one-third">
-          <p>Learning about Brisbane, back in my day.</p>
+          <p>Learning about Brisbane,<br>back in <a href="/about">my</a> day.</p>
         </div>
 
     </header>
