--- a/webapp/webapp/templates/home/item.jinja2
+++ b/webapp/webapp/templates/home/item.jinja2
@@ -32,6 +32,8 @@
       {{keyword}}
     {% endfor %}
     </p>
+    <hr>
+    <p>Look at you with your fancy <a href="http://www.twitter.com/share?url=http://www.brisbert.com/{{result.database}}/{{result.id}}">sharing on Twitter</a>.</p>
 
   </div>
 
