--- a/webapp/webapp/templates/speak/speak.jinja2
+++ b/webapp/webapp/templates/speak/speak.jinja2
@@ -1,7 +1,7 @@
 
 <div class="g l--push-v-1">
-  <div class="g__item w--two-thirds w--m-one-half">
-    <div class="l--pad-h-1 text--para-margin">
+  <div class="g__item w--two-thirds w--m-one-whole">
+    <div class="text--para-margin">
       {{speak.bert|safe}}
     </div>
   </div>
