Removed alternate for no image

--- a/webapp/webapp/templates/home/home.jinja2
+++ b/webapp/webapp/templates/home/home.jinja2
@@ -43,7 +43,7 @@
         {% if result.url %}
           <div class="media--image">
             <a href="{{result.database}}/{{result.id}}">
-              <img src="{{result.url}}" alt="Test">
+              <img src="{{result.url}}">
             </a>
           </div>
         {% endif %}
