--- a/webapp/webapp/templates/home/home.jinja2
+++ b/webapp/webapp/templates/home/home.jinja2
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="l--push-top-1 text--align-right">
-        <button id="find_button" type="submit" class="form--story__button">ramble</button>
+        <button id="find_button" type="submit" class="button--primary">ramble</button>
       </div>
     </form>
   </div>
@@ -65,15 +65,22 @@
 
 <div class="l__wrapper footer">
   <footer role="contentinfo" class="l--pad-bottom-2">
-    <div class="g">
-      <div class="g__item w--one-half">
+    <div class="g--centered">
+      <div class="g__item w--s-one-third w--m-one-half w--six-tenths">
         <div class="footer__block l--push-top-2">
-          <h2 class="delta footer__title">Bert is on Twitter!</h2>
+          <div class="media--image">
+            <img class="w--l-one-half w--h-one-half" src="/assets/img/mo.svg" alt="BrisBert's style at the time">
+          </div>
+        </div>
+      </div>
+      <div class="g__item w--m-two-thirds w--two-thirds">
+        <div class="footer__block l--push-top-2">
+          <h2 class="delta footer__title">BrisBert is on Twitter!</h2>
           <ul class="tweet list--link-block list--slat" id="twitter_update_list"></ul>
           <div><a href="http://twitter.com/BrisBert">Find BrisBert on Twitter</a></div>
         </div>
       </div>
-      <div class="g__item w--one-half">
+      <div class="g__item w--m-one-third w--one-third">
         <div class="footer__block l--push-top-2">
           <h2 class="delta footer__title">Made at <a href="http://govhack.org">GovHack</a></h2>
           <ul class="list--link-block list--slat l--push-bottom-1">
