--- a/front/src/assets/css-sg/style-old-ie.css
+++ b/front/src/assets/css-sg/style-old-ie.css
@@ -1499,8 +1499,8 @@ Centered grids align grid items centrally without needing to use push or pull cl
   -moz-transition: 0.2s ease-out;
   -o-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
-  font-size: 0.625em;
-  line-height: 2.4em;
+  font-size: 0.875em;
+  line-height: 1.71429em;
   white-space: nowrap;
   overflow: hidden;
   -ms-text-overflow: ellipsis;
@@ -2029,43 +2029,40 @@ button.form--story__button:hover {
   font-weight: 700;
 }
 
-.card__body {
-  background-color: white;
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-}
-
-.card__image {
-  position: relative;
-  padding-top: 0;
-  padding-bottom: 50%;
-  height: 0;
-  overflow: hidden;
-}
-.card__image img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.card__text p:last-child {
-  margin: 0;
-}
-
-.card__more {
-  background-color: #f2f2f2;
-  padding: 0.375em 1.5em;
-}
-
 .media--image {
   align: center;
 }
 .media--image img {
   margin: 0 auto;
   display: block;
+}
+
+.button, .button--primary,
+.btn,
+button,
+input[type="submit"] {
+  background-color: white;
+  color: #333333;
+  border: none;
+  padding: 0.5625em 0.75em;
+  -webkit-appearance: none;
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.button--primary {
+  background-color: #0580a4;
+  color: #fefbf5;
+}
+.button--primary:hover {
+  background-color: #034659;
+  color: white;
+}
+.button--primary:active {
+  background-color: black;
+  color: white;
 }
 
 .header {
@@ -2084,14 +2081,17 @@ button.form--story__button:hover {
 
 .header__logo {
   max-width: 6em;
-  padding: 1.125em 0 0.375em;
+  padding: 1.125em 0 0.75em;
 }
 
 .header__tagline {
   font-style: italic;
-  clear: both;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .footer {
