--- a/front/src/assets/sass/style.scss
+++ b/front/src/assets/sass/style.scss
@@ -68,8 +68,9 @@ These are components that can be utilised or are depended on by other components
 @import "_components/emphasis";
 @import "_components/off-canvas";
 @import "_components/comments";
-@import "_components/cards";
+// @import "_components/cards";
 @import "_components/media";
+@import "_components/buttons";
 
 @import "_components/header";
 @import "_components/footer";
