--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -36,7 +36,7 @@
 
   <!-- JavaScript -->
   <!-- TODO: Replace with minified url -->
-  <script src="/assets/js/script.js"></script>
+  <script src="/assets/js/script.min.js"></script>
   {% include 'common/bert_js.jinja2' %}
 
   <!-- Icons -->
@@ -81,26 +81,7 @@
 </head>
 
 <body class="off-canvas__outer">
-<!--   <div class="off-canvas__target off-canvas--left" id="off-canvas--left" data-off-canvas="under">
-    <header class="off-canvas__header">
-      <a href="#off-canvas--left" class="off-canvas__close"><span class="is-invisible">Close</span></a>
-      <span class="gamma">History</span>
-    </header>
-    <nav class="list--slat list--block-links">
-      <ul>
-        <li>No history</li>
-      </ul>
-    </nav>
-  </div> -->
-<!--   <div class="off-canvas__target off-canvas--right" id="off-canvas--right" data-off-canvas="under">
-    <header class="off-canvas__header">
-      <a href="#off-canvas--right" class="off-canvas__close"><span class="is-invisible">Close</span></a>
-      <h2 class="gamma off-canvas__header__title">Who is BrisBert?</h2>
-    </header>
-    <div class="off-canvas__target__body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis luctus nisi et eros bibendum lacinia. Curabitur sed est nec urna pretium vulputate ut eget lectus. In ultricies, tellus non vehicula malesuada, augue sem aliquet tellus, ut faucibus turpis ante quis nibh. Ut vel turpis tortor, a consectetur ipsum. Sed posuere commodo vestibulum. Pellentesque volutpat diam sem.</p>
-    </div>
-  </div> -->
+
   <div class="off-canvas__inner">
     <div class="l__wrapper emphasis--more-small">
     <header role="banner" class="header">
@@ -110,7 +91,7 @@
         <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert"></div>
       </a>
 
-      <div class="header__tagline w--one-third">
+      <div class="header__tagline w--s-five-eighths w--one-half">
         <p>Learning about Brisbane,<br>back in <a href="/about">my</a> day.</p>
       </div>
 
